Fix Java 11 syntax in test code